force-app/main/default/objects/Opportunily_Line_Project_Tracker__c/Opportunily_Line_Project_Tracker__c.object-meta.xml
<CustomObject>
    <description>The junction object between Opportunity line and Project Tracker</description>
    <label>Opportunity Line - Project Tracker</label>
    <nameField>
        <displayFormat>OLPT-{00000}</displayFormat>
        <label>OL-PT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Line - Project Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>