force-app/main/default/objects/Opportunily_Line_Project_Tracker__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opportunily_Line_Project_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>