force-app/main/default/objects/Opportunily_Line_Project_Tracker__c/fields/Opportunity_Line_LU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity_Line__c.Opportunity_Line__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Accounts__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity_Line__c.Opportunity_Line__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipLabel>Opportunity Line - Project Trackers</relationshipLabel>
    <relationshipName>Opportunily_Line_Project_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>