force-app/main/default/objects/Opportunily_Line_Project_Tracker__c/fields/Project_TrackerLU__c.field-meta.xml
<CustomField>
    <fullName>Project_TrackerLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Tracker</label>
    <referenceTo>Project_Tracker__c</referenceTo>
    <relationshipLabel>Opportunity Line - Project Trackers</relationshipLabel>
    <relationshipName>Opportunily_Line_Project_Trackers1</relationshipName>
    <type>Lookup</type>
</CustomField>